--- a/app_checker.ipynb
+++ b/app_checker.ipynb
@@ -684,7 +684,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 81,
    "metadata": {},
    "outputs": [
     {
@@ -721,179 +721,120 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>49151</th>\n",
-       "      <td>19965</td>\n",
-       "      <td>0</td>\n",
-       "      <td>2024-10-08</td>\n",
-       "      <td>FEB</td>\n",
-       "      <td>UKD-FEB-19965</td>\n",
-       "      <td>19965</td>\n",
-       "      <td>FEB</td>\n",
-       "      <td>4.0</td>\n",
-       "      <td>4.0</td>\n",
+       "      <th>156700</th>\n",
+       "      <td>DRK22</td>\n",
+       "      <td>20</td>\n",
+       "      <td>2024-10-07</td>\n",
+       "      <td>RTG</td>\n",
+       "      <td>DRK22</td>\n",
+       "      <td>DRK22</td>\n",
+       "      <td>RTG</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>-20.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>49153</th>\n",
-       "      <td>19967</td>\n",
-       "      <td>0</td>\n",
-       "      <td>2024-10-08</td>\n",
-       "      <td>FEB</td>\n",
-       "      <td>UKD-FEB-19967</td>\n",
-       "      <td>19967</td>\n",
-       "      <td>FEB</td>\n",
-       "      <td>10.0</td>\n",
-       "      <td>10.0</td>\n",
+       "      <th>157066</th>\n",
+       "      <td>ETC20</td>\n",
+       "      <td>20</td>\n",
+       "      <td>2024-10-07</td>\n",
+       "      <td>RTG</td>\n",
+       "      <td>ETC20</td>\n",
+       "      <td>ETC20</td>\n",
+       "      <td>RTG</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>-20.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>49154</th>\n",
-       "      <td>19968</td>\n",
-       "      <td>0</td>\n",
-       "      <td>2024-10-08</td>\n",
-       "      <td>FEB</td>\n",
-       "      <td>UKD-FEB-19968</td>\n",
-       "      <td>19968</td>\n",
-       "      <td>FEB</td>\n",
-       "      <td>3.0</td>\n",
-       "      <td>3.0</td>\n",
+       "      <th>160440</th>\n",
+       "      <td>PS56</td>\n",
+       "      <td>20</td>\n",
+       "      <td>2024-10-07</td>\n",
+       "      <td>RTG</td>\n",
+       "      <td>PS56</td>\n",
+       "      <td>PS56</td>\n",
+       "      <td>RTG</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>-20.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>49155</th>\n",
-       "      <td>19969</td>\n",
-       "      <td>0</td>\n",
-       "      <td>2024-10-08</td>\n",
-       "      <td>FEB</td>\n",
-       "      <td>UKD-FEB-19969</td>\n",
-       "      <td>19969</td>\n",
-       "      <td>FEB</td>\n",
-       "      <td>6.0</td>\n",
-       "      <td>6.0</td>\n",
+       "      <th>160441</th>\n",
+       "      <td>PS56X2</td>\n",
+       "      <td>20</td>\n",
+       "      <td>2024-10-07</td>\n",
+       "      <td>RTG</td>\n",
+       "      <td>PS56X2</td>\n",
+       "      <td>PS56X2</td>\n",
+       "      <td>RTG</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>-20.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>49157</th>\n",
-       "      <td>19971</td>\n",
-       "      <td>0</td>\n",
-       "      <td>2024-10-08</td>\n",
-       "      <td>FEB</td>\n",
-       "      <td>UKD-FEB-19971</td>\n",
-       "      <td>19971</td>\n",
-       "      <td>FEB</td>\n",
-       "      <td>3.0</td>\n",
-       "      <td>3.0</td>\n",
+       "      <th>160442</th>\n",
+       "      <td>PS56X4</td>\n",
+       "      <td>20</td>\n",
+       "      <td>2024-10-07</td>\n",
+       "      <td>RTG</td>\n",
+       "      <td>PS56X4</td>\n",
+       "      <td>PS56X4</td>\n",
+       "      <td>RTG</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>-20.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
+       "      <th>196243</th>\n",
+       "      <td>BCC503L+BCC503R</td>\n",
+       "      <td>20</td>\n",
+       "      <td>2024-10-07</td>\n",
+       "      <td>RTG</td>\n",
+       "      <td>BCC503L+BCC503R</td>\n",
+       "      <td>BCC503L+BCC503R</td>\n",
+       "      <td>RTG</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>-20.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>195530</th>\n",
-       "      <td>VSMF178</td>\n",
-       "      <td>0</td>\n",
-       "      <td>2024-10-08</td>\n",
-       "      <td>ROL</td>\n",
-       "      <td>UKD-ROL-VSMF178</td>\n",
-       "      <td>VSMF178</td>\n",
-       "      <td>ROL</td>\n",
-       "      <td>10.0</td>\n",
-       "      <td>10.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>195531</th>\n",
-       "      <td>VSMF179</td>\n",
-       "      <td>0</td>\n",
-       "      <td>2024-10-08</td>\n",
-       "      <td>ROL</td>\n",
-       "      <td>UKD-ROL-VSMF179</td>\n",
-       "      <td>VSMF179</td>\n",
-       "      <td>ROL</td>\n",
-       "      <td>10.0</td>\n",
-       "      <td>10.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>195532</th>\n",
-       "      <td>VSMF181</td>\n",
-       "      <td>0</td>\n",
-       "      <td>2024-10-08</td>\n",
-       "      <td>ROL</td>\n",
-       "      <td>UKD-ROL-VSMF181</td>\n",
-       "      <td>VSMF181</td>\n",
-       "      <td>ROL</td>\n",
-       "      <td>10.0</td>\n",
-       "      <td>10.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>195533</th>\n",
-       "      <td>VSMF182</td>\n",
-       "      <td>0</td>\n",
-       "      <td>2024-10-08</td>\n",
-       "      <td>ROL</td>\n",
-       "      <td>UKD-ROL-VSMF182</td>\n",
-       "      <td>VSMF182</td>\n",
-       "      <td>ROL</td>\n",
-       "      <td>10.0</td>\n",
-       "      <td>10.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>195534</th>\n",
-       "      <td>VSMF183</td>\n",
-       "      <td>0</td>\n",
-       "      <td>2024-10-08</td>\n",
-       "      <td>ROL</td>\n",
-       "      <td>UKD-ROL-VSMF183</td>\n",
-       "      <td>VSMF183</td>\n",
-       "      <td>ROL</td>\n",
-       "      <td>10.0</td>\n",
-       "      <td>10.0</td>\n",
+       "      <th>196244</th>\n",
+       "      <td>BCC503R</td>\n",
+       "      <td>20</td>\n",
+       "      <td>2024-10-07</td>\n",
+       "      <td>RTG</td>\n",
+       "      <td>BCC503R</td>\n",
+       "      <td>BCC503R</td>\n",
+       "      <td>RTG</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>-20.0</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>24933 rows × 9 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "       part_number_x  quantity_x updated_date supplier_x     custom_label  \\\n",
-       "49151          19965           0   2024-10-08        FEB    UKD-FEB-19965   \n",
-       "49153          19967           0   2024-10-08        FEB    UKD-FEB-19967   \n",
-       "49154          19968           0   2024-10-08        FEB    UKD-FEB-19968   \n",
-       "49155          19969           0   2024-10-08        FEB    UKD-FEB-19969   \n",
-       "49157          19971           0   2024-10-08        FEB    UKD-FEB-19971   \n",
-       "...              ...         ...          ...        ...              ...   \n",
-       "195530       VSMF178           0   2024-10-08        ROL  UKD-ROL-VSMF178   \n",
-       "195531       VSMF179           0   2024-10-08        ROL  UKD-ROL-VSMF179   \n",
-       "195532       VSMF181           0   2024-10-08        ROL  UKD-ROL-VSMF181   \n",
-       "195533       VSMF182           0   2024-10-08        ROL  UKD-ROL-VSMF182   \n",
-       "195534       VSMF183           0   2024-10-08        ROL  UKD-ROL-VSMF183   \n",
+       "          part_number_x  quantity_x updated_date supplier_x     custom_label  \\\n",
+       "156700            DRK22          20   2024-10-07        RTG            DRK22   \n",
+       "157066            ETC20          20   2024-10-07        RTG            ETC20   \n",
+       "160440             PS56          20   2024-10-07        RTG             PS56   \n",
+       "160441           PS56X2          20   2024-10-07        RTG           PS56X2   \n",
+       "160442           PS56X4          20   2024-10-07        RTG           PS56X4   \n",
+       "196243  BCC503L+BCC503R          20   2024-10-07        RTG  BCC503L+BCC503R   \n",
+       "196244          BCC503R          20   2024-10-07        RTG          BCC503R   \n",
        "\n",
-       "       part_number_y supplier_y  quantity_y  difference  \n",
-       "49151          19965        FEB         4.0         4.0  \n",
-       "49153          19967        FEB        10.0        10.0  \n",
-       "49154          19968        FEB         3.0         3.0  \n",
-       "49155          19969        FEB         6.0         6.0  \n",
-       "49157          19971        FEB         3.0         3.0  \n",
-       "...              ...        ...         ...         ...  \n",
-       "195530       VSMF178        ROL        10.0        10.0  \n",
-       "195531       VSMF179        ROL        10.0        10.0  \n",
-       "195532       VSMF181        ROL        10.0        10.0  \n",
-       "195533       VSMF182        ROL        10.0        10.0  \n",
-       "195534       VSMF183        ROL        10.0        10.0  \n",
-       "\n",
-       "[24933 rows x 9 columns]"
+       "          part_number_y supplier_y  quantity_y  difference  \n",
+       "156700            DRK22        RTG         0.0       -20.0  \n",
+       "157066            ETC20        RTG         0.0       -20.0  \n",
+       "160440             PS56        RTG         0.0       -20.0  \n",
+       "160441           PS56X2        RTG         0.0       -20.0  \n",
+       "160442           PS56X4        RTG         0.0       -20.0  \n",
+       "196243  BCC503L+BCC503R        RTG         0.0       -20.0  \n",
+       "196244          BCC503R        RTG         0.0       -20.0  "
       ]
      },
-     "execution_count": 78,
+     "execution_count": 81,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "inspect_df[(inspect_df[\"difference\"] != 0) & (inspect_df[\"updated_date\"] == NEXT_DATE)].dropna(subset=[\"difference\"])"
+    "inspect_df[(inspect_df[\"difference\"] != 0) & (inspect_df[\"supplier_x\"] == \"RTG\")].dropna(subset=[\"difference\"])"
    ]
   },
   {
@@ -904,6 +845,22 @@
    "source": [
     "inspect_df[inspect_df[\"difference\"] != 0].dropna(subset=[\"difference\"]).to_csv(f\"/Users/chrislittle/Dropbox/#Speedsheet/app_checker/{NEXT_DATE.replace('-', '_')}/inspect.csv\", index=False)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# TODO:\n",
+    "\n",
+    "# Investigate these discrepancies (are they correct?)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
