fix get custom labels issue

--- a/app_checker.ipynb
+++ b/app_checker.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 116,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 117,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,19 +23,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 118,
    "metadata": {},
    "outputs": [],
    "source": [
     "from datetime import datetime, timedelta\n",
     "\n",
-    "BASELINE_DATE = \"2024-10-07\"\n",
-    "NEXT_DATE = (datetime.strptime(BASELINE_DATE, \"%Y-%m-%d\") + timedelta(days=1)).strftime(\"%Y-%m-%d\")"
+    "STOCK_MASTER_DATE = \"2024-10-08\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 119,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -72,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 120,
    "metadata": {},
    "outputs": [
     {
@@ -119,7 +118,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 121,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -153,7 +152,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 122,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -173,7 +172,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 123,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -182,7 +181,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 124,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -191,14 +190,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": 125,
    "metadata": {},
    "outputs": [],
    "source": [
     "import os\n",
     "\n",
     "# Create the directory if it doesn't exist\n",
-    "output_directory = f\"/Users/chrislittle/Dropbox/#Speedsheet/app_checker/{NEXT_DATE.replace('-', '_')}\"\n",
+    "output_directory = f\"/Users/chrislittle/Dropbox/#Speedsheet/app_checker/{STOCK_MASTER_DATE.replace('-', '_')}\"\n",
     "os.makedirs(output_directory, exist_ok=True)\n",
     "\n",
     "df.to_csv(f\"{output_directory}/ebay.csv\", index=False)"
@@ -206,7 +205,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": 126,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -224,14 +223,14 @@
     "    return df\n",
     "\n",
     "sheet_names = [\"Direct\", \"FPS\"]\n",
-    "dfs = read_excel_sheets(f\"/Users/chrislittle/Dropbox/#Speedsheet/stock_master/{NEXT_DATE.replace('-', '_')}/Stock Feed Master.xlsx\", sheet_names)\n",
+    "dfs = read_excel_sheets(f\"/Users/chrislittle/Dropbox/#Speedsheet/stock_master/{STOCK_MASTER_DATE.replace('-', '_')}/Stock Feed Master.xlsx\", sheet_names)\n",
     "processed_dfs = [process_dataframe(df) for df in dfs.values()]\n",
     "df_stock = pd.concat(processed_dfs)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": 127,
    "metadata": {},
    "outputs": [
     {
@@ -361,7 +360,7 @@
        "[259668 rows x 4 columns]"
       ]
      },
-     "execution_count": 107,
+     "execution_count": 127,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -372,7 +371,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": 128,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -381,7 +380,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 109,
+   "execution_count": 129,
    "metadata": {},
    "outputs": [
     {
@@ -463,43 +462,43 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>253204</th>\n",
-       "      <td>NWP1535</td>\n",
+       "      <td>339747</td>\n",
        "      <td>2</td>\n",
        "      <td>2024-10-08</td>\n",
        "      <td>FPS</td>\n",
-       "      <td>UKF-NAP-NWP1535</td>\n",
+       "      <td>UKF-KYB-339747</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>253205</th>\n",
-       "      <td>NWP1537</td>\n",
-       "      <td>1</td>\n",
+       "      <td>339748</td>\n",
+       "      <td>3</td>\n",
        "      <td>2024-10-08</td>\n",
        "      <td>FPS</td>\n",
-       "      <td>UKF-NAP-NWP1537</td>\n",
+       "      <td>UKF-KYB-339748</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>253206</th>\n",
-       "      <td>NWP1538</td>\n",
-       "      <td>7</td>\n",
+       "      <td>339749</td>\n",
+       "      <td>3</td>\n",
        "      <td>2024-10-08</td>\n",
        "      <td>FPS</td>\n",
-       "      <td>UKF-NAP-NWP1538</td>\n",
+       "      <td>UKF-KYB-339749</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>253207</th>\n",
-       "      <td>NWP1539</td>\n",
-       "      <td>0</td>\n",
-       "      <td>2024-10-07</td>\n",
+       "      <td>339750</td>\n",
+       "      <td>4</td>\n",
+       "      <td>2024-10-08</td>\n",
        "      <td>FPS</td>\n",
-       "      <td>UKF-NAP-NWP1539</td>\n",
+       "      <td>UKF-KYB-339750</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>253208</th>\n",
-       "      <td>NWP1540</td>\n",
-       "      <td>10</td>\n",
+       "      <td>339751</td>\n",
+       "      <td>5</td>\n",
        "      <td>2024-10-08</td>\n",
        "      <td>FPS</td>\n",
-       "      <td>UKF-NAP-NWP1540</td>\n",
+       "      <td>UKF-KYB-339751</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -514,16 +513,16 @@
        "3         TC0380FK        10   2024-10-08      BGA  UKD-BGA-TC0380FK\n",
        "4         TC0385FK        10   2024-10-08      BGA  UKD-BGA-TC0385FK\n",
        "...            ...       ...          ...      ...               ...\n",
-       "253204     NWP1535         2   2024-10-08      FPS   UKF-NAP-NWP1535\n",
-       "253205     NWP1537         1   2024-10-08      FPS   UKF-NAP-NWP1537\n",
-       "253206     NWP1538         7   2024-10-08      FPS   UKF-NAP-NWP1538\n",
-       "253207     NWP1539         0   2024-10-07      FPS   UKF-NAP-NWP1539\n",
-       "253208     NWP1540        10   2024-10-08      FPS   UKF-NAP-NWP1540\n",
+       "253204      339747         2   2024-10-08      FPS    UKF-KYB-339747\n",
+       "253205      339748         3   2024-10-08      FPS    UKF-KYB-339748\n",
+       "253206      339749         3   2024-10-08      FPS    UKF-KYB-339749\n",
+       "253207      339750         4   2024-10-08      FPS    UKF-KYB-339750\n",
+       "253208      339751         5   2024-10-08      FPS    UKF-KYB-339751\n",
        "\n",
        "[253209 rows x 5 columns]"
       ]
      },
-     "execution_count": 109,
+     "execution_count": 129,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -534,7 +533,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 110,
+   "execution_count": 130,
    "metadata": {},
    "outputs": [
     {
@@ -664,7 +663,7 @@
        "[259668 rows x 4 columns]"
       ]
      },
-     "execution_count": 110,
+     "execution_count": 130,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -675,7 +674,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 111,
+   "execution_count": 131,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -684,7 +683,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 112,
+   "execution_count": 132,
    "metadata": {},
    "outputs": [
     {
@@ -720,32 +719,102 @@
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>173084</th>\n",
+       "      <td>DRK22</td>\n",
+       "      <td>20</td>\n",
+       "      <td>2024-10-07</td>\n",
+       "      <td>RTG</td>\n",
+       "      <td>DRK22</td>\n",
+       "      <td>DRK22</td>\n",
+       "      <td>RTG</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>-20.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>173450</th>\n",
+       "      <td>ETC20</td>\n",
+       "      <td>20</td>\n",
+       "      <td>2024-10-07</td>\n",
+       "      <td>RTG</td>\n",
+       "      <td>ETC20</td>\n",
+       "      <td>ETC20</td>\n",
+       "      <td>RTG</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>-20.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>176824</th>\n",
+       "      <td>PS56</td>\n",
+       "      <td>20</td>\n",
+       "      <td>2024-10-07</td>\n",
+       "      <td>RTG</td>\n",
+       "      <td>PS56</td>\n",
+       "      <td>PS56</td>\n",
+       "      <td>RTG</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>-20.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>176825</th>\n",
+       "      <td>PS56X2</td>\n",
+       "      <td>20</td>\n",
+       "      <td>2024-10-07</td>\n",
+       "      <td>RTG</td>\n",
+       "      <td>PS56X2</td>\n",
+       "      <td>PS56X2</td>\n",
+       "      <td>RTG</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>-20.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>176826</th>\n",
+       "      <td>PS56X4</td>\n",
+       "      <td>20</td>\n",
+       "      <td>2024-10-07</td>\n",
+       "      <td>RTG</td>\n",
+       "      <td>PS56X4</td>\n",
+       "      <td>PS56X4</td>\n",
+       "      <td>RTG</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>-20.0</td>\n",
+       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "Empty DataFrame\n",
-       "Columns: [part_number_x, quantity_x, updated_date, supplier_x, custom_label, part_number_y, supplier_y, quantity_y, difference]\n",
-       "Index: []"
+       "       part_number_x  quantity_x updated_date supplier_x custom_label  \\\n",
+       "173084         DRK22          20   2024-10-07        RTG        DRK22   \n",
+       "173450         ETC20          20   2024-10-07        RTG        ETC20   \n",
+       "176824          PS56          20   2024-10-07        RTG         PS56   \n",
+       "176825        PS56X2          20   2024-10-07        RTG       PS56X2   \n",
+       "176826        PS56X4          20   2024-10-07        RTG       PS56X4   \n",
+       "\n",
+       "       part_number_y supplier_y  quantity_y  difference  \n",
+       "173084         DRK22        RTG         0.0       -20.0  \n",
+       "173450         ETC20        RTG         0.0       -20.0  \n",
+       "176824          PS56        RTG         0.0       -20.0  \n",
+       "176825        PS56X2        RTG         0.0       -20.0  \n",
+       "176826        PS56X4        RTG         0.0       -20.0  "
       ]
      },
-     "execution_count": 112,
+     "execution_count": 132,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "inspect_df[(inspect_df[\"difference\"] != 0) & (inspect_df[\"supplier_x\"] == \"RTG\") & (inspect_df[\"updated_date\"] == NEXT_DATE)].dropna(subset=[\"difference\"])"
+    "inspect_df[(inspect_df[\"difference\"] != 0) & (inspect_df[\"supplier_x\"] == \"RTG\")].dropna(subset=[\"difference\"])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 113,
+   "execution_count": 133,
    "metadata": {},
    "outputs": [],
    "source": [
-    "inspect_df[(inspect_df[\"difference\"] != 0) & (inspect_df[\"supplier_x\"] == \"RTG\")].dropna(subset=[\"difference\"]).to_csv(f\"/Users/chrislittle/Dropbox/#Speedsheet/app_checker/{NEXT_DATE.replace('-', '_')}/inspect.csv\", index=False)"
+    "inspect_df[(inspect_df[\"difference\"] != 0) & (inspect_df[\"supplier_x\"] == \"RTG\")].dropna(subset=[\"difference\"]).to_csv(f\"/Users/chrislittle/Dropbox/#Speedsheet/app_checker/{STOCK_MASTER_DATE.replace('-', '_')}/inspect.csv\", index=False)"
    ]
   },
   {
