--- a/app_checker.ipynb
+++ b/app_checker.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 116,
+   "execution_count": 134,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 117,
+   "execution_count": 135,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 118,
+   "execution_count": 136,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 119,
+   "execution_count": 137,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -71,14 +71,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 120,
+   "execution_count": 138,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[{'Data': [{'VarCharValue': 'part_number'}, {'VarCharValue': 'quantity'}, {'VarCharValue': 'updated_date'}, {'VarCharValue': 'supplier'}, {'VarCharValue': 'custom_label'}]}, {'Data': [{'VarCharValue': 'TC0365FK'}, {'VarCharValue': '10'}, {'VarCharValue': '2024-10-08'}, {'VarCharValue': 'BGA'}, {'VarCharValue': 'UKD-BGA-TC0365FK'}]}, {'Data': [{'VarCharValue': 'TC0370FK'}, {'VarCharValue': '3'}, {'VarCharValue': '2024-10-08'}, {'VarCharValue': 'BGA'}, {'VarCharValue': 'UKD-BGA-TC0370FK'}]}, {'Data': [{'VarCharValue': 'TC0380F'}, {'VarCharValue': '10'}, {'VarCharValue': '2024-10-08'}, {'VarCharValue': 'BGA'}, {'VarCharValue': 'UKD-BGA-TC0380F'}]}, {'Data': [{'VarCharValue': 'TC0380FK'}, {'VarCharValue': '10'}, {'VarCharValue': '2024-10-08'}, {'VarCharValue': 'BGA'}, {'VarCharValue': 'UKD-BGA-TC0380FK'}]}]\n"
+      "[{'Data': [{'VarCharValue': 'part_number'}, {'VarCharValue': 'quantity'}, {'VarCharValue': 'updated_date'}, {'VarCharValue': 'supplier'}, {'VarCharValue': 'custom_label'}]}, {'Data': [{'VarCharValue': 'ABR101'}, {'VarCharValue': '10'}, {'VarCharValue': '2024-10-08'}, {'VarCharValue': 'APE'}, {'VarCharValue': 'UKD-APE-ABR101'}]}, {'Data': [{'VarCharValue': 'ABR102'}, {'VarCharValue': '10'}, {'VarCharValue': '2024-10-08'}, {'VarCharValue': 'APE'}, {'VarCharValue': 'UKD-APE-ABR102'}]}, {'Data': [{'VarCharValue': 'ABR103'}, {'VarCharValue': '10'}, {'VarCharValue': '2024-10-08'}, {'VarCharValue': 'APE'}, {'VarCharValue': 'UKD-APE-ABR103'}]}, {'Data': [{'VarCharValue': 'ABR104'}, {'VarCharValue': '10'}, {'VarCharValue': '2024-10-08'}, {'VarCharValue': 'APE'}, {'VarCharValue': 'UKD-APE-ABR104'}]}]\n"
      ]
     }
    ],
@@ -118,7 +118,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 121,
+   "execution_count": 139,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -152,7 +152,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 122,
+   "execution_count": 140,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -172,7 +172,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 123,
+   "execution_count": 141,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -181,7 +181,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 124,
+   "execution_count": 142,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -190,7 +190,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 125,
+   "execution_count": 143,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -205,7 +205,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 126,
+   "execution_count": 144,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -230,7 +230,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 127,
+   "execution_count": 145,
    "metadata": {},
    "outputs": [
     {
@@ -360,7 +360,7 @@
        "[259668 rows x 4 columns]"
       ]
      },
-     "execution_count": 127,
+     "execution_count": 145,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -371,7 +371,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 128,
+   "execution_count": 146,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -380,7 +380,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 129,
+   "execution_count": 147,
    "metadata": {},
    "outputs": [
     {
@@ -414,43 +414,43 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>TC0365FK</td>\n",
+       "      <td>ABR101</td>\n",
        "      <td>10</td>\n",
        "      <td>2024-10-08</td>\n",
-       "      <td>BGA</td>\n",
-       "      <td>UKD-BGA-TC0365FK</td>\n",
+       "      <td>APE</td>\n",
+       "      <td>UKD-APE-ABR101</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>TC0370FK</td>\n",
-       "      <td>3</td>\n",
+       "      <td>ABR102</td>\n",
+       "      <td>10</td>\n",
        "      <td>2024-10-08</td>\n",
-       "      <td>BGA</td>\n",
-       "      <td>UKD-BGA-TC0370FK</td>\n",
+       "      <td>APE</td>\n",
+       "      <td>UKD-APE-ABR102</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>TC0380F</td>\n",
+       "      <td>ABR103</td>\n",
        "      <td>10</td>\n",
        "      <td>2024-10-08</td>\n",
-       "      <td>BGA</td>\n",
-       "      <td>UKD-BGA-TC0380F</td>\n",
+       "      <td>APE</td>\n",
+       "      <td>UKD-APE-ABR103</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>TC0380FK</td>\n",
+       "      <td>ABR104</td>\n",
        "      <td>10</td>\n",
        "      <td>2024-10-08</td>\n",
-       "      <td>BGA</td>\n",
-       "      <td>UKD-BGA-TC0380FK</td>\n",
+       "      <td>APE</td>\n",
+       "      <td>UKD-APE-ABR104</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>TC0385FK</td>\n",
+       "      <td>ABR105</td>\n",
        "      <td>10</td>\n",
        "      <td>2024-10-08</td>\n",
-       "      <td>BGA</td>\n",
-       "      <td>UKD-BGA-TC0385FK</td>\n",
+       "      <td>APE</td>\n",
+       "      <td>UKD-APE-ABR105</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
@@ -506,23 +506,23 @@
        "</div>"
       ],
       "text/plain": [
-       "       part_number  quantity updated_date supplier      custom_label\n",
-       "0         TC0365FK        10   2024-10-08      BGA  UKD-BGA-TC0365FK\n",
-       "1         TC0370FK         3   2024-10-08      BGA  UKD-BGA-TC0370FK\n",
-       "2          TC0380F        10   2024-10-08      BGA   UKD-BGA-TC0380F\n",
-       "3         TC0380FK        10   2024-10-08      BGA  UKD-BGA-TC0380FK\n",
-       "4         TC0385FK        10   2024-10-08      BGA  UKD-BGA-TC0385FK\n",
-       "...            ...       ...          ...      ...               ...\n",
-       "253204      339747         2   2024-10-08      FPS    UKF-KYB-339747\n",
-       "253205      339748         3   2024-10-08      FPS    UKF-KYB-339748\n",
-       "253206      339749         3   2024-10-08      FPS    UKF-KYB-339749\n",
-       "253207      339750         4   2024-10-08      FPS    UKF-KYB-339750\n",
-       "253208      339751         5   2024-10-08      FPS    UKF-KYB-339751\n",
+       "       part_number  quantity updated_date supplier    custom_label\n",
+       "0           ABR101        10   2024-10-08      APE  UKD-APE-ABR101\n",
+       "1           ABR102        10   2024-10-08      APE  UKD-APE-ABR102\n",
+       "2           ABR103        10   2024-10-08      APE  UKD-APE-ABR103\n",
+       "3           ABR104        10   2024-10-08      APE  UKD-APE-ABR104\n",
+       "4           ABR105        10   2024-10-08      APE  UKD-APE-ABR105\n",
+       "...            ...       ...          ...      ...             ...\n",
+       "253204      339747         2   2024-10-08      FPS  UKF-KYB-339747\n",
+       "253205      339748         3   2024-10-08      FPS  UKF-KYB-339748\n",
+       "253206      339749         3   2024-10-08      FPS  UKF-KYB-339749\n",
+       "253207      339750         4   2024-10-08      FPS  UKF-KYB-339750\n",
+       "253208      339751         5   2024-10-08      FPS  UKF-KYB-339751\n",
        "\n",
        "[253209 rows x 5 columns]"
       ]
      },
-     "execution_count": 129,
+     "execution_count": 147,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -533,7 +533,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 130,
+   "execution_count": 148,
    "metadata": {},
    "outputs": [
     {
@@ -663,7 +663,7 @@
        "[259668 rows x 4 columns]"
       ]
      },
-     "execution_count": 130,
+     "execution_count": 148,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -674,7 +674,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 131,
+   "execution_count": 149,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -683,7 +683,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 132,
+   "execution_count": 150,
    "metadata": {},
    "outputs": [
     {
@@ -720,31 +720,7 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>173084</th>\n",
-       "      <td>DRK22</td>\n",
-       "      <td>20</td>\n",
-       "      <td>2024-10-07</td>\n",
-       "      <td>RTG</td>\n",
-       "      <td>DRK22</td>\n",
-       "      <td>DRK22</td>\n",
-       "      <td>RTG</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>-20.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>173450</th>\n",
-       "      <td>ETC20</td>\n",
-       "      <td>20</td>\n",
-       "      <td>2024-10-07</td>\n",
-       "      <td>RTG</td>\n",
-       "      <td>ETC20</td>\n",
-       "      <td>ETC20</td>\n",
-       "      <td>RTG</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>-20.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>176824</th>\n",
+       "      <th>168632</th>\n",
        "      <td>PS56</td>\n",
        "      <td>20</td>\n",
        "      <td>2024-10-07</td>\n",
@@ -756,7 +732,7 @@
        "      <td>-20.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>176825</th>\n",
+       "      <th>168633</th>\n",
        "      <td>PS56X2</td>\n",
        "      <td>20</td>\n",
        "      <td>2024-10-07</td>\n",
@@ -768,7 +744,7 @@
        "      <td>-20.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>176826</th>\n",
+       "      <th>168634</th>\n",
        "      <td>PS56X4</td>\n",
        "      <td>20</td>\n",
        "      <td>2024-10-07</td>\n",
@@ -785,21 +761,17 @@
       ],
       "text/plain": [
        "       part_number_x  quantity_x updated_date supplier_x custom_label  \\\n",
-       "173084         DRK22          20   2024-10-07        RTG        DRK22   \n",
-       "173450         ETC20          20   2024-10-07        RTG        ETC20   \n",
-       "176824          PS56          20   2024-10-07        RTG         PS56   \n",
-       "176825        PS56X2          20   2024-10-07        RTG       PS56X2   \n",
-       "176826        PS56X4          20   2024-10-07        RTG       PS56X4   \n",
+       "168632          PS56          20   2024-10-07        RTG         PS56   \n",
+       "168633        PS56X2          20   2024-10-07        RTG       PS56X2   \n",
+       "168634        PS56X4          20   2024-10-07        RTG       PS56X4   \n",
        "\n",
        "       part_number_y supplier_y  quantity_y  difference  \n",
-       "173084         DRK22        RTG         0.0       -20.0  \n",
-       "173450         ETC20        RTG         0.0       -20.0  \n",
-       "176824          PS56        RTG         0.0       -20.0  \n",
-       "176825        PS56X2        RTG         0.0       -20.0  \n",
-       "176826        PS56X4        RTG         0.0       -20.0  "
+       "168632          PS56        RTG         0.0       -20.0  \n",
+       "168633        PS56X2        RTG         0.0       -20.0  \n",
+       "168634        PS56X4        RTG         0.0       -20.0  "
       ]
      },
-     "execution_count": 132,
+     "execution_count": 150,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -810,7 +782,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 133,
+   "execution_count": 151,
    "metadata": {},
    "outputs": [],
    "source": [
